core/k8s/05-tekton/eventlistener-base.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-eventlistener
  namespace: tekton-pipelines
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${HOOKS_HOST}.${ROOT_DOMAIN}`)
      kind: Rule
      services:
        - name: el-build-listener
          port: 8080
