core/k8s/05-tekton/eventlistener.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tekton-eventlistener
  namespace: tekton-pipelines
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hooks.${ROOT_DOMAIN}`)
      kind: Rule
      services:
        - name: el-gitee-listener
          port: 8080
